mmc: ffu: Fix endianness error

Cast properly before sending data to eMMC device.

BUG=chromium:864570
TEST=no warning when compiling, but tested only little endian.

Change-Id: I298e13bfc9253065d6232c24c1de5488bdc03e25
Signed-off-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1165500
Reviewed-by: Guenter Roeck <groeck@chromium.org>